# neuroncore

./: Cargo.toml  LICENSE-APACHE  README.md
examples/: anomaly_from_replay.rs
src/: error.rs  graph.rs  layers.rs  lib.rs  losses.rs  ops.rs  optim.rs  prng.rs  run_manifest.rs  tensor.rs  tensor_index.rs  timeseries.rs
src/health/: anomaly.rs  mod.rs
src/industrial/: ingest.rs  mod.rs  mtconnect.rs  opcua.rs  replay.rs  schema.rs
tests/: anomaly_tests.rs  industrial_replay_tests.rs  invert_tests.rs  manifest_tests.rs  mtconnect_fixture_tests.rs  opcua_stub_tests.rs  tensor_index_tests.rs  tensor_ops_tests.rs  training_smoke.rs  windowing_tests.rs
tests/fixtures/: industrial_sample.ndjson  mtconnect_current.xml
